[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/UI_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/border_walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/level_timer.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/attachment.gd" type="Script" id=6]
[ext_resource path="res://scripts/tutorial_prompt.gd" type="Script" id=7]

[node name="level_6_root" type="Node2D"]
script = ExtResource( 6 )

[node name="UI_node" parent="." instance=ExtResource( 1 )]

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 413, 537 )

[node name="border_walls" parent="." instance=ExtResource( 3 )]

[node name="coin" parent="." instance=ExtResource( 4 )]

[node name="coin2" parent="." instance=ExtResource( 4 )]
position = Vector2( 751, 18 )

[node name="coin3" parent="." instance=ExtResource( 4 )]
position = Vector2( 752, 553 )

[node name="coin4" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, 553 )

[node name="coin5" parent="." instance=ExtResource( 4 )]
position = Vector2( 411, 300 )

[node name="level_timer" parent="." instance=ExtResource( 5 )]

[node name="tutorial_prompt" type="Node" parent="."]
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="tutorial_prompt"]

[node name="ColorRect" type="ColorRect" parent="tutorial_prompt/CanvasLayer"]
visible = false
margin_left = 222.0
margin_top = 451.0
margin_right = 623.0
margin_bottom = 570.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="tutorial_prompt/CanvasLayer"]
visible = false
margin_left = 241.0
margin_top = 467.0
margin_right = 410.0
margin_bottom = 515.0
rect_scale = Vector2( 2, 2 )
text = "would you like to die now?
left: yes
right: no"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial_timer" type="Timer" parent="tutorial_prompt/CanvasLayer"]
wait_time = 2.0
autostart = true

[connection signal="reset_player" from="tutorial_prompt" to="." method="_on_tutorial_prompt_reset_player"]
[connection signal="timeout" from="tutorial_prompt/CanvasLayer/tutorial_timer" to="tutorial_prompt" method="_on_tutorial_timer_timeout"]
